# StoryGenerator

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLEANUP.md  CLEANUP_REPO.md  CSHARP_IMPLEMENTATION_COMPLETE.md  DEPRECATED_PROJECTS.md  DOCUMENTATION_SUMMARY.md  ENHANCEMENTS.md  FACEBOOK_DATABASE_COMPARISON_SUMMARY.md  FOLDER_STRUCTURE.md  GENERATOR_STRUCTURE.md  GROUP_1_IMPLEMENTATION_SUMMARY.md  GROUP_3_SCRIPT_DEVELOPMENT_SUMMARY.md  GROUP_4_COMPLETION_CHECKLIST.md  GROUP_4_SCENE_PLANNING_SUMMARY.md  GROUP_5_AUDIO_PRODUCTION_SUMMARY.md  IMPLEMENTATION_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_SUMMARY.md  ISSUE_REORGANIZATION_SUMMARY.md  ISSUE_TRACKING.md  LICENSE  LLM_QUICKSTART.md  MONITORING.md  MainProgressHub.md  NEXT_PHASE3_TASKS.md  NEXT_STEPS.md  OBSOLETE_CLEANUP_SUMMARY.md  P0_SECURITY_RESOLUTION_SUMMARY.md  PHASE3_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md  PHASE4_MVP_COMPLETE.md  PIPELINE.md  POST_PRODUCTION.md  POST_PRODUCTION_SUMMARY.md  POST_ROADMAP_TRACKER.md  (+35 more)
CSharp/: .env.example  IMPLEMENTATION_GUIDE.md  INTERFACES_GUIDE.md  POST_PRODUCTION_CSHARP.md  POST_PRODUCTION_IMPLEMENTATION_SUMMARY.md  PRACTICAL_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE_SOLID_OOP_CLEAN_CODE.md  README.md  README_SUBTITLE_ALIGNMENT.md  README_VIDEO_SYNTHESIS.md  SOLID_OOP_CLEAN_CODE_README.md  SUBTITLE_ALIGNMENT.md  VOICEOVER_README.md  stylecop.json  video_synthesis_config.example.json
Configuration/: scoring.yaml
Documentation/: VOICE_CLONING_GUIDE.md
Examples/: monitoring_demo.py
Generators/: GSceneAnalyzer.py  GSceneDescriber.py  GVoice.py
PrismQ/: README.md  __init__.py
Python/: requirements.txt
Tests/: test_facebook_database.py  test_final_export_integration.py  test_openai_provider.py  test_social_media_scrapers.py  test_title_score.py
Tools/: Utils.py  view_metrics.py
Video/: README.md  VideoPipeline.py  VideoRenderer.py  __init__.py
config/: audience_config.json  audience_config.test.json  pipeline-simple.yaml  pipeline.yaml  rtx5090.yaml  scoring.yaml  sdxl_config.py  vision_prompts.py
core/: CACHING_GUIDE.md  CONFIG_README.md  __init__.py  audio_production.py  cache.py  config.py  database.py  errors.py  logging.py  models.py  platform_comparison.py  retry.py  scene_planning.py  script_development.py  validation.py
data/: pipeline_stories.db  platform_analytics.db
docs/: ATTRIBUTION_INTEGRATION.md  CHANGELOG.md  CHILD_ISSUES.md  CODE_STYLE_GUIDE.md  CONFIGURATION.md  CONTENT_RANKING.md  CSHARP_RESEARCH.md  CSHARP_VS_PYTHON_COMPARISON.md  DATABASE_RECOMMENDATIONS.md  ERROR_HANDLING_GUIDE.md  EXAMPLES.md  FAQ.md  FEATURES.md  FINAL_REORGANIZATION.md  GPU_COMPARISON.md  HARDWARE_REQUIREMENTS.md  HYBRID_ARCHITECTURE_DIAGRAMS.md  HYBRID_ARCHITECTURE_QUICKREF.md  HYBRID_ROADMAP.md  IDEA_COLLECTOR_QUICKREF.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TITLE_IMPROVEMENT.md  INDEX.md  INFRASTRUCTURE.md  INPUT_VALIDATION_GUIDE.md  INSTALLATION.md  ISSUE_REORGANIZATION_SUMMARY.md  ISSUE_TRACKING.md  MICROSTEP_VALIDATION_QUICKSTART.md  MIGRATION_GUIDE.md  MODELS.md  NEXT_PHASE3_TASKS.md  P1_PARALLEL_TASK_GROUPS.md  P1_PIPELINE_HUB.md  PEP_ADOPTION_SUMMARY.md  PIPELINE_CHECKLIST.md  PIPELINE_ORCHESTRATION.md  PIPELINE_ORCHESTRATOR.md  PIPELINE_OUTPUT_FILES.md  PYTHON_OBSOLETE_NOTICE.md  (+27 more)
examples/: BATCH_PRICING_README.md  alt_sources_example.py  attribution_usage_example.py  basic_pipeline.py  batch_pricing_example.py  batch_processing.py  caching_example.py  content_ranking_examples.py  custom_story_ideas.py  demo_quality_checker.py  demo_video_variant_selector.py  example_batch_export.py  example_export_registry.py  infrastructure_demo.py  microstep_validation_demo.py  optimized_provider_example.py  platform_batch_analytics.py  platform_database_comparison.py  platform_facebook_example.py  platform_instagram_example.py  platform_tiktok_example.py  platform_youtube_example.py  provider_architecture_example.py  quality_scoring_examples.py  scene_planning_example.py  script_to_wordpress_example.py  sdxl_keyframe_example.py  title_improvement_examples.py  title_scoring_examples.py  topic_generation_with_validation.py  video_clip_generation_example.py  vision_guidance_example.py  vision_utilities_demo.py  wordpress_integration_example.py
issues/: GROUP_8_COMPLETION_SUMMARY.md  INDEX.md  NEW_ISSUES_SUMMARY.md  QUICKSTART.md  README.md
obsolete/: MIGRATION_STATUS.md  QUICKSTART.md  README.md
pipeline/: DATABASE_TRACKING.md  IMPLEMENTATION_SUMMARY.md  QUICKREF.md
podcasts/: README.md
providers/: OPTIMIZED_OPENAI_GUIDE.md  README.md  __init__.py  facebook_provider.py  instagram_provider.py  mock_provider.py  openai_optimized.py  openai_provider.py  tiktok_provider.py  wordpress_provider.py  youtube_provider.py
research/: README.md  SHORT_VIDEO_IMPLEMENTATION_SUMMARY.md  SHORT_VIDEO_QUICKREF.md  SHORT_VIDEO_SYSTEM_DESIGN.md  SHORT_VIDEO_SYSTEM_DESIGN_CS.md  SOCIAL_PLATFORMS_TRENDS.md  SOURCE_STATS_COLLECTION.md  SOURCE_STATS_QUICK_REFERENCE.md  SOURCE_STATS_USAGE_EXAMPLES.md  VIDEO_SYNTHESIS_RESEARCH.md  VIRAL_VIDEO_REQUIREMENTS.md  YOUTUBE_CONTENT_STRATEGY.md  YOUTUBE_SUBTITLE_RESEARCH.md  research-assignment-group-04.md
scripts/: README.md  README_REDDIT_SCRAPER.md  check-clean-root.sh  check_video_quality.py  cleanup-example.sh  content_ranking.py  deduplicate_content.py  detect-dead-code.py  generate_atomic_issues.py  generate_attribution.py  microstep_validate.py  process_quality.py  process_trends.py  publish_podbean.py  reddit_scraper.py  select_video_variant.py  setup_folders.py  title_improve.py  title_score.py  verify_folders.py  verify_python_env.py
social_trends/: README.md  __init__.py  cli.py  pipeline.py  requirements.txt
src/scripts/: ltx_synthesis.py  pyproject.toml  requirements.txt  whisper_asr.py
src/scripts/common/: io_json.py
src/scripts/tests/: __init__.py  test_io_json.py
tests/: README.md  TESTING_GUIDE.md  conftest.py  test_alt_sources.py  test_attribution.py  test_cache.py  test_content_quality.py  test_content_ranking.py  test_core_config.py  test_core_errors.py  (+24 more)
(+1269 files in other folders)
